Update SonarCloud organization and add sonar-maven-plugin across microservices; update datasource passwords